# app_vesuvian

./: .gitignore
backend/: .gitignore  README.md  alembic.ini  app.db  frontend_integration.mcp.json  mcp.json  mobile_integration.mcp.json  mypy.ini  pyproject.toml  requirements.txt  test.db
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 3b122e6b3ede_add_exercise_library_tables.py  68b8821e890c_create_daily_state_and_recommendation_.py  899b901afe4a_create_program_and_ai_models.py
backend/app/: main.py
backend/app/api/: dependencies.py  mcp.json
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  auth.py  daily_state.py  exercises.py  mcp.json  programs.py  users.py
backend/app/core/: base_repository.py  config.py  database.py  logging.py  mcp.json  security.py
backend/app/domains/ai/models/: __init__.py  ai_context.py
backend/app/domains/ai/repositories/: __init__.py  ai_context.py
backend/app/domains/ai/routes/: ai.py
backend/app/domains/ai/schemas/: __init__.py  ai_context.py
backend/app/domains/ai/services/: __init__.py  (+1 more)
backend/app/domains/users/: __init__.py
backend/app/models/: mcp.json  user.py
backend/app/repositories/: base.py  mcp.json  user.py
backend/app/schemas/: mcp.json  user.py
backend/app/services/: mcp.json  user.py
backend/scripts/: seed.py
backend/scripts/seed_data/: exercises.json
backend/tests/: conftest.py  test_ai_service.py  test_daily_state_service.py  test_exercise_api.py  test_exercise_service.py  test_program_service.py  test_user_service.py
(+96 files in other folders)
