[project]
name = "vesuvian"
version = "0.1.0"
description = ""
authors = [
    {name = "ciprian",email = "cipriangrigore.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "pydantic-ai (>=1.0.10,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "asyncpg (>=0.27.0,<1.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E203"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


